<resources>
    <string name="app_name">groceryBuddy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_json_parser">Test JSON Parser</string>
    <string name="enter_pantry">Enter Pantry</string>
    <string name="pantry_button">Pantry</string>
    <string name="appicon">appIcon</string>
    <string name="shopping_list">Shopping List</string>
    <string name="my_pantry">My Pantry</string>
    <string name="stringAddProduct">Add Product</string>
    <string name="snack_bar_text">item removed</string>
    <string name="snack_bar_undo">undo</string>
    <string name="add_item">Add Item</string>
    <string name="info">Info</string>
    <string name="grocery_buddy">Grocery Buddy</string>
    <string name="recipes">Recipes</string>
</resources>
